# egg-mono

./: .gitignore  LICENSE  Makefile  README.md  answer-tool.md  api-reported-pricing-todo.md  autocontinue.md  compaction-todo.md  cpu-usage-reduce-plan.md  dot.env.example  eggw-parity.md  eggw-streaming-performance-todo.md  explicit-rlm-todo.md  explicit-rlm.md  fullscree-scrollback-todo.md  get_user_message.md  invariants.md  min-verbosity-todo.md  plugins-todo.md  precise-cost.md  pricing-todo.md  pyproject.toml  scheduler-incremental.md  scheduler-ui-separation.md  search-and-fetch-observations.md  semantic-refactor-20260709-todo.md  summary-after-compaction-todo.md  verbocity-todo.md  wait-fix.md  worker-manager.md
egg/: .gitignore  __init__.py  all-models.json  egg-textual.py  egg-textual.sh  egg.sh  models.json  pyproject.toml  requirements.txt  systemPrompt
egg/.beads/: issues.jsonl
egg/egg/: app.py  approval.py  attachments.py  completion.py  edit_answer.py  formatting.py  image_generation.py  input.py  launcher_supervisor.py  min_run_summary.py  panels.py  streaming.py  systemPrompt  theme.py  utils.py
egg/tests/: conftest.py  test_approval.py  test_attachment_commands.py  test_commands_display.py  test_commands_model.py  test_commands_sandbox.py  test_commands_session.py  test_commands_thread.py  test_commands_tools.py  test_commands_utility.py  test_completion.py  test_ctrlc_pending_stream_boundary.py  test_edit_answer_command.py  test_formatting.py  test_get_user_message_ui.py  test_image_generation_command.py  test_input.py  test_input_responsiveness.py  test_integration_workflow.py  test_model_inheritance.py  test_operational_recovery_presentation.py  test_panels.py  test_quick_start.py  test_quick_start_launcher.py  test_skills.py  test_streaming_tui.py  test_utils.py
eggconfig/: __init__.py  pyproject.toml
eggconfig/eggconfig/: __init__.py
eggdisplay/: .gitignore  FEATURES.md  README.md  __init__.py  animated_expanding_chat.py  async_layout_chat.py  example_usage.py  final_chat_demo.py  final_chat_demo_async.py  final_interactive.py  input_panel_demo.py  interactive_demo.py  layout_chat_demo.py  multiline_chat_demo.py  programmatic_demo.py  pyproject.toml  real_time_editor.py  setup.py  simple_async_demo.py  simple_realtime_demo.py  simple_test.py  test_editor.py  text_editor.py
eggdisplay/eggdisplay/: __init__.py  eggdisplay.py  renderers.py  streams.py
eggdisplay/tests/: __init__.py  test_bracketed_paste.py  test_input_panel_horizontal_scroll.py  test_input_panel_scrolling.py  test_input_panel_typing.py  test_large_paste_not_truncated.py  test_output_panel_rendering.py  test_renderers_terminal_safety.py  test_stream_cost_shape.py  test_text_editor_paste.py
eggflow/: .gitignore  API.md  README.md  __init__.py  error-handling.md  pyproject.toml
eggflow/eggflow/: __init__.py  core.py  eggthreads_tasks.py
eggflow/scripts/: generate_api_docs.py  generate_pdoc.sh
eggflow/tests/: conftest.py  test_alpha_evolve.py  test_context_executor.py  test_corruption.py  test_critique.py  test_files.py  test_flow_engine.py  test_gepa.py  test_optillm.py  test_retry.py  test_taskmethod.py  test_terminal_errors.py  test_tot.py  test_uncacheable.py
eggllm/: .env.example  .gitignore  LICENSE  Makefile  README.md  __init__.py  all-models.json.example  models.json.example  pyproject.toml  tox.ini
eggllm/docs/: responses-api.md
eggllm/egg_llm/: __init__.py  catalog.py  client.py  registry.py
eggllm/eggllm/: __init__.py  capabilities.py  catalog.py  client.py  config.py  image_generation.py  provider_http.py  registry.py  tokenizer.py
eggllm/examples/: basic_stream.py  update_catalog.py
eggllm/tests/: .test_client_sanitize.py.swp  test_capabilities.py  test_catalog_update.py  test_client_sanitize.py  test_image_generation.py  test_openai_responses.py  test_provider_http.py  test_provider_timeouts.py  test_registry.py
eggopt/: API.md  README.md  RUNNING.md  __init__.py  pyproject.toml
eggopt/eggopt/: __init__.py  _context.py  _identity.py  _native_evaluation.py  actor_critic.py  core.py  eggflow.py  eggflow_evaluation.py  eggflow_repair.py  eggthreads.py  eggthreads_runtime.py  evaluation.py  gepa.py  native_gepa.py  physics.py  repair.py  runtime.py  solver_execution.py  strategies.py  upstream_gepa.py
eggopt/tests/: conftest.py  test_contextual_gepa.py  test_core.py  test_eggflow.py  test_eggthreads.py  test_evaluation.py  test_gepa.py  test_gepa_integration.py  test_hierarchical_runtime.py  test_native_gepa.py  test_physics.py  test_production_reflection_drive.py  test_repair.py  test_solver_execution.py  test_strategies.py  test_substrate_integration.py  test_upstream_gepa.py
eggthreads/: .gitignore  API.md  README.md  __init__.py  pyproject.toml  system-design.md  systemPrompt
eggthreads/docker/: Dockerfile  Dockerfile.session  create-image.sh  create-session-image.sh
eggthreads/eggthreads/: __init__.py  api.py  approval.py  arg_parser.py  artifact_completion.py  attachment_lowering.py  attachment_staging.py  attachment_tools.py  command_catalog.py  content_parts.py  db.py  edit_answer.py  event_feed.py  event_watcher.py  events.py  image_generation.py  input_artifacts.py  inspection.py  llm.py  output_paths.py  output_policy.py  owned_byte_artifacts.py  plugins.py  projection.py  provider_output_artifacts.py  provider_output_export.py  quick_start.py  repl_bridge.py  runner.py  runner_recovery.py  sandbox.py  schema.py  session.py  snapshot.py  terminal_safety.py  token_count.py  tool_call_id.py  tool_help.py  tool_output.py  tool_output_contract.py  (+4 more)
eggthreads/examples/: headless_subtree_scheduler.py  reporting.py
eggthreads/scripts/: generate_api_docs.py  generate_pdoc.sh
eggthreads/tests/: __init__.py  conftest.py  test_answer_user_preserve_turn.py  test_approval_policies.py  test_attachment_lowering.py  test_attachment_staging.py  test_attachment_tools.py  test_auto_session_repl.py  test_bash_registry_path.py  test_bash_repl_tool.py  (+86 more)
eggw/: .gitignore  README.md  __init__.py  eggw.sh  pyproject.toml  run_tests.sh
(+262 files in other folders)
