[project]
name = "egg-mono"
version = "0.0.0"
description = "Development workspace for the egg ecosystem"
requires-python = ">=3.10"

[tool.pytest.ini_options]
# The monorepo tests use asyncio.run(...) explicitly rather than pytest-asyncio
# markers. Keeping no asyncio_mode avoids noisy "unknown config option"
# warnings in minimal environments where pytest-asyncio is not installed.
