[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "egg"
version = "0.1.0"
description = "CLI chat interface for eggthreads"
requires-python = ">=3.10"
dependencies = [
  "eggthreads>=0.1.0",
  "eggdisplay>=0.1.0",
  "eggllm>=0.1.0",
  "eggconfig>=0.1.0",
  "rich",
  "prompt_toolkit",
]

[project.scripts]
egg = "egg.app:main"

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "pytest-asyncio>=0.21",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["egg*"]

[tool.setuptools.package-data]
egg = ["systemPrompt"]
