[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eggopt"
version = "0.1.0"
description = "Domain-neutral optimization producer contracts for Egg"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Entropy Gradient" }]
dependencies = []
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["."]
include = ["eggopt*"]
