[project]
name = "eggthreads"
version = "0.1.0"
description = "Asyncio thread runner for tree-structured AI chats on SQLite (egg schema)"
authors = [{name="Entropy Gradient", email="noreply@example.com"}]
requires-python = ">=3.10"
dependencies = [
  "rich",
  "uvloop; platform_system != 'Windows'",
]

[project.optional-dependencies]
llm = ["eggllm>=0.1.0"]
dev = ["pdoc3", "eggllm>=0.1.0"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["eggthreads"]
exclude = ["temp*"]
