[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eggw"
version = "0.1.0"
description = "Web UI for eggthreads (FastAPI backend)"
requires-python = ">=3.10"
dependencies = [
  "eggthreads>=0.1.0",
  "eggllm>=0.1.0",
  "eggconfig>=0.1.0",
  "fastapi>=0.109.0",
  "hypercorn>=0.16.0",
  "h2>=4.0.0",
  "websockets>=12.0",
  "pydantic>=2.5.0",
  "sse-starlette>=1.8.0",
  "python-multipart>=0.0.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["eggw*"]
